--- a/app/src/main/res/layout/activity_ijkplayer_test.xml
+++ b/app/src/main/res/layout/activity_ijkplayer_test.xml
@@ -11,14 +11,14 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
-        <com.demos.yxn.lifecircle.ijk.VideoPlayerIJK
+        <com.demos.kotlin.ijk.VideoPlayerIJK
             android:id="@+id/surface_view_player_test_01"
             android:layout_width="0dp"
             android:layout_height="200in"
             android:layout_weight="1"
             android:orientation="horizontal"
             />
-        <com.demos.yxn.lifecircle.ijk.VideoPlayerIJK
+        <com.demos.kotlin.ijk.VideoPlayerIJK
             android:id="@+id/surface_view_player_test_02"
             android:layout_width="0dp"
             android:layout_height="200in"
@@ -32,14 +32,14 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
-        <com.demos.yxn.lifecircle.ijk.VideoPlayerIJK
+        <com.demos.kotlin.ijk.VideoPlayerIJK
             android:id="@+id/surface_view_player_test_03"
             android:layout_width="0dp"
             android:layout_height="200in"
             android:layout_weight="1"
             android:orientation="horizontal"
             />
-        <com.demos.yxn.lifecircle.ijk.VideoPlayerIJK
+        <com.demos.kotlin.ijk.VideoPlayerIJK
             android:id="@+id/surface_view_player_test_04"
             android:layout_width="0dp"
             android:layout_height="200in"
