--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.demos.yxn.lifecircle.liftcycle.FirstActivity">
+    tools:context="com.demos.kotlin.lifecycle.FirstActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
