--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:listDivider">@drawable/list_divider_bg</item>
         <item name="android:background">@android:color/white</item>
+        <item name="android:textSize">18sp</item>
 
     </style>
 
