--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">@android:color/holo_green_dark</color>
     <color name="colorWhite">@android:color/white</color>
     <color name="colorBackground">#e0e0e0</color>
+    <color name="colorRed">#f00</color>
+    <color name="colorBlue">#00f</color>
+    <color name="colorGreen">#0f0</color>
 </resources>
