--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -12,20 +12,57 @@
         android:layout_height="match_parent" />
 
     <ImageView
-        android:id="@+id/btn_open_gallery"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="50dp"
-        android:src="@android:drawable/ic_menu_gallery" />
+        android:id="@+id/btn_back_camera"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_margin="20dp"
+        android:src="@drawable/ic_back" />
 
     <ImageView
+        android:id="@+id/btn_info"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_alignParentRight="true"
+        android:layout_margin="20dp"
+        android:src="@android:drawable/ic_dialog_info" />
+
+    <ImageView
+        android:id="@+id/btn_switch_camera"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_margin="20dp"
+        android:layout_toLeftOf="@id/btn_info"
+        android:src="@drawable/ic_switch_camera" />
+
+    <ImageView
+        android:id="@+id/btn_open_gallery"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="50dp"
+        android:layout_marginBottom="40dp"
+        android:src="@drawable/ic_gallery" />
+
+    <RelativeLayout
         android:id="@+id/btn_capture"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp"
-        android:src="@android:drawable/ic_menu_camera" />
+        android:layout_marginBottom="20dp">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_capture_bg" />
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_capture_front" />
+    </RelativeLayout>
+
 
 </RelativeLayout>
