--- a/app/src/main/res/drawable/shape_bg_switch_checked.xml
+++ b/app/src/main/res/drawable/shape_bg_switch_checked.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="@color/colorPrimary" />
-    <corners android:radius="5dp" />
+    <corners android:radius="@dimen/radius_of_switch" />
     <size
-        android:width="40dp"
-        android:height="24dp" />
+        android:width="@dimen/width_of_switch_track"
+        android:height="@dimen/height_of_switch_track" />
 </shape>
