--- a/app/src/main/res/drawable/shape_thumb_switch_checked.xml
+++ b/app/src/main/res/drawable/shape_thumb_switch_checked.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="@color/colorWhite" />
-    <corners android:radius="5dp" />
+    <corners android:radius="@dimen/radius_of_switch" />
     <size
-        android:width="24dp"
-        android:height="24dp" />
+        android:width="@dimen/width_of_switch_thumb"
+        android:height="@dimen/height_of_switch_thumb" />
     <stroke
         android:width="1dp"
         android:color="@color/colorPrimary" />
