--- a/app/src/main/res/layout/activity_we_chat_camera.xml
+++ b/app/src/main/res/layout/activity_we_chat_camera.xml
@@ -4,7 +4,7 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              tools:context=".WeChatCameraActivity">
+              tools:context=".activity.WeChatCameraActivity">
 
     <com.cjt2325.cameralibrary.JCameraView
         android:id="@+id/jcameraview"
