--- a/app/src/main/res/layout/layout_info.xml
+++ b/app/src/main/res/layout/layout_info.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:src="@drawable/ic_close" />
+        android:src="@mipmap/ic_close" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_camera_blue" />
+            android:src="@mipmap/ic_camera_blue" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -46,7 +46,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_search_person" />
+                android:src="@mipmap/ic_search_person" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -65,7 +65,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_search_car" />
+                android:src="@mipmap/ic_search_car" />
 
             <TextView
                 android:layout_width="wrap_content"
