--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
     <color name="colorBlue">#00f</color>
     <color name="colorGreen">#0f0</color>
     <color name="colorGray">#999</color>
+
+    <color name="white">#ffffff</color>
+    <color name="bg_color">#f9f9f9</color>
+    <color name="tran_black">#80999999</color>
 </resources>
