--- a/react-native/android/app/src/main/res/layout/activity_main.xml
+++ b/react-native/android/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.demos.kotlin.lifecycle.MainActivity">
+    tools:context="com.demos.kotlin.activity.lifecycle.MainActivity">
 
     <Button
         android:id="@+id/button"
