--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@android:color/holo_green_dark</color>
-    <color name="colorPrimaryDark">@android:color/holo_green_dark</color>
-    <color name="colorAccent">@android:color/holo_green_dark</color>
+    <color name="colorPrimary">#00CD66</color>
+    <color name="colorPrimaryDark">#32CD32</color>
+    <color name="colorAccent">#90EE90</color>
     <color name="colorWhite">@android:color/white</color>
     <color name="colorBackground">#e0e0e0</color>
     <color name="colorRed">#f00</color>
