--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-
     <dimen name="width_of_switch_thumb">24dp</dimen>
     <dimen name="height_of_switch_thumb">24dp</dimen>
     <dimen name="width_of_switch_track">40dp</dimen>
@@ -9,4 +8,8 @@
     <dimen name="radius_of_switch">5dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+
 </resources>
