--- a/app/src/main/res/drawable/shape_bg_corner.xml
+++ b/app/src/main/res/drawable/shape_bg_corner.xml
@@ -4,5 +4,5 @@
     <solid android:color="@color/colorTabSelected" />
     <stroke
         android:width="1dp"
-        android:color="@color/colorRed" />
+        android:color="@color/colorTabBorder" />
 </shape>
