--- a/app/src/main/res/drawable/shape_bg_tab_selected.xml
+++ b/app/src/main/res/drawable/shape_bg_tab_selected.xml
@@ -8,7 +8,7 @@
                 android:topRightRadius="40dp" />
             <stroke
                 android:width="1dp"
-                android:color="@color/colorRed" />
+                android:color="@color/colorTabBorder" />
         </shape>
     </item>
     <item
