Custom tabLayout with viewPager.

--- a/app/src/main/res/layout/activity_custom_tab_host.xml
+++ b/app/src/main/res/layout/activity_custom_tab_host.xml
@@ -7,22 +7,23 @@
     android:background="@color/colorPrimary"
     android:padding="20dp">
 
-    <LinearLayout
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/view_pager_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="60dp"
-        android:background="@drawable/shape_bg_corner"></LinearLayout>
+        android:layout_marginTop="@dimen/tab_view_pager_offset_top"
+        android:background="@drawable/shape_bg_corner" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="@dimen/tab_layout_height"
         android:background="@android:color/transparent"
         app:tabBackground="@drawable/selector_tab_background"
         app:tabGravity="fill"
         app:tabIndicator="@null"
         app:tabMaxWidth="0dp"
-        app:tabPaddingBottom="40dp"
+        app:tabPaddingBottom="@dimen/tab_padding_bottom"
         app:tabRippleColor="@null"
         app:tabTextColor="@color/colorTabBorder" />
 
