--- a/app/src/main/res/drawable/shape_bg_tab_selected_right.xml
+++ b/app/src/main/res/drawable/shape_bg_tab_selected_right.xml
@@ -4,16 +4,16 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/colorTabSelected" />
             <corners
-                android:topLeftRadius="40dp"
-                android:topRightRadius="40dp" />
+                android:topLeftRadius="@dimen/tab_corner_radius"
+                android:topRightRadius="@dimen/tab_corner_radius" />
             <stroke
-                android:width="1dp"
+                android:width="@dimen/tab_border_width"
                 android:color="@color/colorTabBorder" />
         </shape>
     </item>
     <item
-        android:right="1dp"
-        android:top="61dp">
+        android:right="@dimen/tab_border_width"
+        android:top="@dimen/tab_bottom_layer_offset_top">
         <shape android:shape="rectangle">
             <solid android:color="@color/colorTabSelected" />
         </shape>
