Chrome style TabLayout.

--- a/app/src/main/res/layout/layout_chrome_tab.xml
+++ b/app/src/main/res/layout/layout_chrome_tab.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/root_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    android:padding="20dp">
+    android:layout_height="match_parent">
 
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/view_pager_layout"
+        android:id="@+id/chrome_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/tab_view_pager_offset_top"
         android:background="@drawable/shape_bg_corner" />
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_layout"
+        android:id="@+id/chrome_tab_layout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/tab_layout_height"
         android:background="@android:color/transparent"
