--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/shape_bg_corner"
     tools:context=".fragment.BlankFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -15,8 +16,8 @@
         <ImageView
             android:id="@+id/img_norm_type"
             android:layout_width="40dp"
-            android:src="@drawable/ic_camera_enhance_black_24dp"
-            android:layout_height="40dp" />
+            android:layout_height="40dp"
+            android:src="@drawable/ic_camera_enhance_black_24dp" />
 
         <TextView
             android:id="@+id/type_fragment_01"
