--- a/app/src/main/res/layout/activity_card_view_pager.xml
+++ b/app/src/main/res/layout/activity_card_view_pager.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="20dp"
     tools:context=".activity.CardViewPagerActivity">
 
     <LinearLayout
@@ -29,6 +30,6 @@
         android:id="@+id/view_pager_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="20dp" />
+        android:padding="30dp" />
 
 </LinearLayout>
