--- a/app/src/main/res/layout/fragment_blank_fragment2.xml
+++ b/app/src/main/res/layout/fragment_blank_fragment2.xml
@@ -6,11 +6,9 @@
     android:background="@drawable/shape_bg_corner"
     tools:context=".fragment.BlankFragment2">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.demos.kotlin.views.tablayout.ChromeViewPager
+        android:id="@+id/view_pager_fragment_2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="fragment2" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
