--- a/app/src/main/res/layout/layout_chrome_tab.xml
+++ b/app/src/main/res/layout/layout_chrome_tab.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.viewpager.widget.ViewPager
+    <com.demos.kotlin.views.tablayout.ChromeViewPager
         android:id="@+id/chrome_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
