--- a/app/src/main/res/layout/activity_custom_map.xml
+++ b/app/src/main/res/layout/activity_custom_map.xml
@@ -6,9 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".activity.CustomMapActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-       />
+    <com.demos.kotlin.views.mapview.CityMapView
+        android:id="@+id/svg_map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true" />
+
 </LinearLayout>
