--- a/app/src/main/res/layout/activity_custom_map.xml
+++ b/app/src/main/res/layout/activity_custom_map.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     tools:context=".activity.CustomMapActivity">
 
     <com.demos.kotlin.views.mapview.CityMapView
         android:id="@+id/svg_map"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
