--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,4 +28,8 @@
     <dimen name="map_min_width">200dp</dimen>
     <dimen name="map_min_height">147dp</dimen>
 
+    <!--map-->
+    <dimen name="map_max_width">500dp</dimen>
+    <dimen name="map_max_height">400dp</dimen>
+
 </resources>
