--- a/app/src/main/res/layout/activity_custom_map.xml
+++ b/app/src/main/res/layout/activity_custom_map.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="700dp"
     android:gravity="center"
     tools:context=".activity.CustomMapActivity">
 
@@ -11,5 +11,12 @@
         android:id="@+id/svg_map"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <!--
+
+        <com.demos.kotlin.views.mapview.CityMapView
+            android:id="@+id/svg_map"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    -->
 
 </LinearLayout>
