--- a/app/src/main/res/layout/activity_custom_map.xml
+++ b/app/src/main/res/layout/activity_custom_map.xml
@@ -3,20 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="700dp"
-    android:gravity="center"
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     tools:context=".activity.CustomMapActivity">
 
-    <com.demos.kotlin.views.mapview.CityMapView
-        android:id="@+id/svg_map"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <!--
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:layout_marginTop="30dp"
+        android:orientation="vertical">
 
         <com.demos.kotlin.views.mapview.CityMapView
             android:id="@+id/svg_map"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    -->
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 </LinearLayout>
