--- a/app/src/main/res/layout/bar_marker_view.xml
+++ b/app/src/main/res/layout/bar_marker_view.xml
@@ -4,19 +4,19 @@
     android:id="@+id/root_view_marker_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@mipmap/bg_left_arrow"
+    android:background="@mipmap/bg_right_arrow"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/title_marker_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="title"
-        />
+        android:text="title" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_data_marker_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp" />
 
 </LinearLayout>
