--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -46,4 +46,21 @@
         <item>#355AD8A6</item>
 
     </array>
+
+    <!--图表中用到的颜色-->
+    <array name="color_charts_detail">
+        <item>#D94F77FA</item>
+        <item>#D95AD8A6</item>
+        <item>#D9F6BD16</item>
+        <item>#D9E8684A</item>
+        <item>#D95D7092</item>
+        <item>#D9BDD2FD</item>
+        <item>#FF5B8FF9</item>
+        <item>#D96DC8EC</item>
+        <item>#D99270CA</item>
+        <item>#D9FF9D4D</item>
+        <item>#D9FF99C3</item>
+        <item>#D9269A99</item>
+
+    </array>
 </resources>
