--- a/app/src/main/res/layout/activity_combined.xml
+++ b/app/src/main/res/layout/activity_combined.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <com.github.mikephil.charting.charts.CombinedChart
-        android:id="@+id/chart1"
+        android:id="@+id/combined_chart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
