--- a/app/src/main/res/layout/activity_seek_bar.xml
+++ b/app/src/main/res/layout/activity_seek_bar.xml
@@ -11,6 +11,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin">
 
     <com.demos.kotlin.views.RangeFilterBar
+        android:id="@+id/range_filter_bar"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         app:color_line_normal="#dedede"
@@ -19,4 +20,16 @@
         app:stroke_width_select="0dp"
         app:text_color="#238dfb"
         app:text_size="12sp" />
+
+    <com.demos.kotlin.views.TwoWayRattingBar
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_centerInParent="true"
+        app:color_line_normal="#dedede"
+        app:color_line_select="#238dfb"
+        app:stroke_width_normal="0dp"
+        app:stroke_width_select="0dp"
+        app:text_color="#238dfb"
+        app:text_size="12sp" />
+
 </RelativeLayout>
