--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,6 +37,7 @@
     <color name="item_unselected_bg_color">#FFE8EBF5</color>
     <color name="chart_value_color">#73000000</color>
     <color name="chart_grid_color">#26000000</color>
+    <color name="mis_actionbar_color">#21282C</color>
 
     <!--图表中用到的颜色-->
     <array name="color_charts">
