--- a/app/src/main/res/drawable/list_divider_bg.xml
+++ b/app/src/main/res/drawable/list_divider_bg.xml
@@ -3,13 +3,12 @@
     android:shape="rectangle">
 
     <gradient
-        android:centerColor="@android:color/darker_gray"
-        android:endColor="@android:color/holo_green_dark"
-        android:startColor="@android:color/darker_gray"
-        android:type="linear"/>
+        android:centerColor="@color/colorOrange"
+        android:endColor="@color/colorOrangeLight"
+        android:startColor="@color/colorOrange" />
 
     <size
-        android:height="2dp"
-        android:width="10dp"/>
+        android:width="10dp"
+        android:height="2dp" />
 
 </shape>
