--- a/app/src/main/res/drawable/shape_bg_corner.xml
+++ b/app/src/main/res/drawable/shape_bg_corner.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="40dp" />
-    <solid android:color="@color/colorTabSelected" />
+    <solid android:color="@color/colorBlueDark" />
     <stroke
         android:width="1dp"
-        android:color="@color/colorTabBorder" />
+        android:color="@color/colorWhite40" />
 </shape>
