--- a/app/src/main/res/drawable/shape_bg_switch_unchecked.xml
+++ b/app/src/main/res/drawable/shape_bg_switch_unchecked.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/colorGray" />
+    <solid android:color="@color/colorSysGray" />
     <corners android:radius="@dimen/radius_of_switch" />
     <size
         android:width="@dimen/width_of_switch_track"
