--- a/app/src/main/res/drawable/shape_corner_bg_with_shadow.xml
+++ b/app/src/main/res/drawable/shape_corner_bg_with_shadow.xml
@@ -3,11 +3,11 @@
 
     <item>
         <shape>
-            <solid android:color="@color/white" />
+            <solid android:color="@color/colorWhite" />
             <corners android:radius="10dp" />
             <stroke
                 android:width="1dp"
-                android:color="@color/colorGray" />
+                android:color="@color/colorSysGray" />
         </shape>
     </item>
 </layer-list>
