--- a/app/src/main/res/drawable/shape_thumb_switch_unchecked.xml
+++ b/app/src/main/res/drawable/shape_thumb_switch_unchecked.xml
@@ -8,5 +8,5 @@
         android:height="@dimen/height_of_switch_thumb" />
     <stroke
         android:width="1dp"
-        android:color="@color/colorGray" />
+        android:color="@color/colorSysGray" />
 </shape>
