--- a/app/src/main/res/layout/activity_custom_map.xml
+++ b/app/src/main/res/layout/activity_custom_map.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorTabSelected"
+    android:background="@color/colorBlueDark"
     android:gravity="center_horizontal"
     tools:context=".activity.CustomMapActivity">
 
