--- a/app/src/main/res/layout/activity_tab_scroll_view.xml
+++ b/app/src/main/res/layout/activity_tab_scroll_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_color"
+    android:background="@color/colorBackground"
     android:orientation="vertical">
 
     <TextView
@@ -30,7 +30,7 @@
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/bg_color">
+        android:background="@color/colorBackground">
 
         <LinearLayout
             android:layout_width="match_parent"
