--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -11,7 +11,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
-        android:background="@color/white">
+        android:background="@color/colorWhite">
 
         <ImageView
             android:id="@+id/img_norm_type"
