--- a/app/src/main/res/layout/inc_detail_evaluate.xml
+++ b/app/src/main/res/layout/inc_detail_evaluate.xml
@@ -48,7 +48,7 @@
             android:layout_height="0.8dp"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="12dp"
-            android:background="@color/colorGray" />
+            android:background="@color/colorSysGray" />
 
         <RelativeLayout
             android:id="@+id/item_evaluate"
