--- a/app/src/main/res/layout/item_tab.xml
+++ b/app/src/main/res/layout/item_tab.xml
@@ -17,5 +17,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:textColor="@color/white" />
+        android:textColor="@color/colorWhite" />
 </com.demos.kotlin.views.SquareLayout>
