--- a/app/src/main/res/layout/mis_activity_default.xml
+++ b/app/src/main/res/layout/mis_activity_default.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/mis_actionbar_color"
+        android:background="@color/colorWhite"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:minHeight="?android:attr/actionBarSize">
 
